[package]
name = "cipher-buster"
version = "0.1.0"
authors = ["Ian Smith <isilversmith810@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
array-init = "1.0.0"
itertools = "0.9.0"
num = "0.3.0"
num-traits = { version = "0.2.12", features = ["i128"] }